--- a/requirements.txt
+++ b/requirements.txt
@@ -1,260 +1,104 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-absl-py=2.0.0=pypi_0
-accelerate=0.25.0=pypi_0
-altair=4.1.0=py_1
-anyio=3.5.0=py39haa95532_0
-appdirs=1.4.4=pypi_0
-argon2-cffi=21.3.0=pyhd3eb1b0_0
-argon2-cffi-bindings=21.2.0=py39h2bbff1b_0
-asttokens=2.0.5=pyhd3eb1b0_0
-astunparse=1.6.3=pypi_0
-attrs=22.1.0=py39haa95532_0
-audioread=3.0.1=pypi_0
-azure-core=1.29.6=pypi_0
-azure-identity=1.15.0=pypi_0
-babel=2.9.1=pyhd3eb1b0_0
-backcall=0.2.0=pyhd3eb1b0_0
-beautifulsoup4=4.11.1=py39haa95532_0
-blas=1.0=mkl
-bleach=4.1.0=pyhd3eb1b0_0
-bottleneck=1.3.5=py39h080aedc_0
-brotli=1.0.9=h2bbff1b_7
-brotli-bin=1.0.9=h2bbff1b_7
-brotlipy=0.7.0=py39h2bbff1b_1003
-ca-certificates=2022.10.11=haa95532_0
-cachetools=5.3.2=pypi_0
-certifi=2023.7.22=pypi_0
-cffi=1.15.1=py39h2bbff1b_0
-chardet=4.0.0=pypi_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.1.7=pypi_0
-colorama=0.4.5=py39haa95532_0
-cryptography=38.0.1=py39h21b164f_0
-cycler=0.10.0=pypi_0
-debugpy=1.5.1=py39hd77b12b_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-diffusers=0.25.0=pypi_0
-docker-pycreds=0.4.0=pypi_0
-entrypoints=0.4=py39haa95532_0
-et_xmlfile=1.1.0=py39haa95532_0
-executing=0.8.3=pyhd3eb1b0_0
-fftw=3.3.9=h2bbff1b_1
-filelock=3.13.1=pypi_0
-flatbuffers=23.5.26=pypi_0
-fonttools=4.25.0=pyhd3eb1b0_0
-freetype=2.12.1=ha860e81_0
-fsspec=2023.12.2=pypi_0
-gast=0.5.4=pypi_0
-gensim=4.3.2=pypi_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.41=pypi_0
-glib=2.69.1=h5dc1a3c_1
-google-auth=2.25.2=pypi_0
-google-auth-oauthlib=1.1.0=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.60.0=pypi_0
-gst-plugins-base=1.18.5=h9e645db_0
-gstreamer=1.18.5=hd78058f_0
-h5py=3.10.0=pypi_0
-huggingface-hub=0.20.2=pypi_0
-icc_rt=2022.1.0=h6049295_2
-icu=58.2=ha925a31_3
-idna=2.10=pypi_0
-importlib-metadata=4.11.3=py39haa95532_0
-imutils=0.5.4=pypi_0
-intel-openmp=2021.4.0=haa95532_3556
-ipykernel=6.15.2=py39haa95532_0
-ipython=8.6.0=py39haa95532_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-ipywidgets=7.6.5=pyhd3eb1b0_1
-isodate=0.6.1=pypi_0
-jedi=0.18.1=py39haa95532_1
-jinja2=3.1.2=py39haa95532_0
-joblib=1.1.1=py39haa95532_0
-jpeg=9e=h2bbff1b_0
-json5=0.9.6=pyhd3eb1b0_0
-jsonschema=4.16.0=py39haa95532_0
-jupyter=1.0.0=py39haa95532_8
-jupyter_client=7.4.7=py39haa95532_0
-jupyter_console=6.4.3=pyhd3eb1b0_0
-jupyter_core=4.11.2=py39haa95532_0
-jupyter_server=1.18.1=py39haa95532_0
-jupyterlab=3.4.4=py39haa95532_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_server=2.15.2=py39haa95532_0
-jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-keras=2.15.0=pypi_0
-kiwisolver=1.4.2=py39hd77b12b_0
-lazy-loader=0.3=pypi_0
-lerc=3.0=hd77b12b_0
-libbrotlicommon=1.0.9=h2bbff1b_7
-libbrotlidec=1.0.9=h2bbff1b_7
-libbrotlienc=1.0.9=h2bbff1b_7
-libclang=16.0.6=pypi_0
-libdeflate=1.8=h2bbff1b_5
-libffi=3.4.2=hd77b12b_5
-libiconv=1.16=h2bbff1b_2
-libogg=1.3.5=h2bbff1b_1
-libpng=1.6.37=h2a8f88b_0
-librosa=0.10.1=pypi_0
-libsodium=1.0.18=h62dcd97_0
-libtiff=4.4.0=h8a3f274_2
-libvorbis=1.3.7=he774522_0
-libwebp=1.2.4=h2bbff1b_0
-libwebp-base=1.2.4=h2bbff1b_0
-libxml2=2.9.14=h0ad7f3c_0
-libxslt=1.1.35=h2bbff1b_0
-llvmlite=0.41.1=pypi_0
-lxml=4.9.1=py39h1985fb9_0
-lz4-c=1.9.3=h2bbff1b_1
-markdown=3.5.1=pypi_0
-markupsafe=2.1.1=py39h2bbff1b_0
-matplotlib=3.5.3=py39haa95532_0
-matplotlib-base=3.5.3=py39hd77b12b_0
-matplotlib-inline=0.1.6=py39haa95532_0
-mistune=0.8.4=py39h2bbff1b_1000
-mkl=2021.4.0=haa95532_640
-mkl-service=2.4.0=py39h2bbff1b_0
-mkl_fft=1.3.1=py39h277e83a_0
-mkl_random=1.2.2=py39hf11a4ad_0
-ml-dtypes=0.2.0=pypi_0
-mpmath=1.3.0=pypi_0
-msal=1.26.0=pypi_0
-msal-extensions=1.1.0=pypi_0
-msgpack=1.0.7=pypi_0
-msrest=0.7.1=pypi_0
-munkres=1.1.4=py_0
-nbclassic=0.4.8=py39haa95532_0
-nbclient=0.5.13=py39haa95532_0
-nbconvert=6.5.4=py39haa95532_0
-nbformat=5.5.0=py39haa95532_0
-nest-asyncio=1.5.5=py39haa95532_0
-networkx=3.2.1=pypi_0
-notebook=6.5.2=py39haa95532_0
-notebook-shim=0.2.2=py39haa95532_0
-numba=0.58.1=pypi_0
-numexpr=2.8.4=py39h5b0cc5e_0
-numpy=1.25.2=pypi_0
-oauthlib=3.2.2=pypi_0
-opencv-python-headless=4.8.0.74=pypi_0
-openpyxl=3.0.10=py39h2bbff1b_0
-openssl=1.1.1s=h2bbff1b_0
-opt-einsum=3.3.0=pypi_0
-packaging=21.3=pyhd3eb1b0_0
-pandas=1.5.1=py39hf11a4ad_0
-pandocfilters=1.5.0=pyhd3eb1b0_0
-parso=0.8.3=pyhd3eb1b0_0
-pcre=8.45=hd77b12b_0
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=10.2.0=pypi_0
-pip=22.2.2=py39haa95532_0
-ply=3.11=py39haa95532_0
-pooch=1.8.0=pypi_0
-portalocker=2.8.2=pypi_0
-prometheus_client=0.14.1=py39haa95532_0
-prompt-toolkit=3.0.20=pyhd3eb1b0_0
-prompt_toolkit=3.0.20=hd3eb1b0_0
-protobuf=4.23.4=pypi_0
-psutil=5.9.0=py39h2bbff1b_0
-pure_eval=0.2.2=pyhd3eb1b0_0
-pyasn1=0.5.1=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pydo=0.2.0=pypi_0
-pygments=2.11.2=pyhd3eb1b0_0
-pyjwt=2.8.0=pypi_0
-pynput=1.7.6=pypi_0
-pyopenssl=22.0.0=pyhd3eb1b0_0
-pyparsing=2.4.7=pypi_0
-pyqt=5.15.7=py39hd77b12b_0
-pyqt5-sip=12.11.0=py39hd77b12b_0
-pyrsistent=0.18.0=py39h196d8e1_0
-pysocks=1.7.1=py39haa95532_0
-python=3.9.15=h6244533_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-dotenv=1.0.0=pypi_0
-python-fastjsonschema=2.16.2=py39haa95532_0
-python-graphviz=0.20.1=pypi_0
-python-magic=0.4.27=pypi_0
-pytz=2022.1=py39haa95532_0
-pywin32=302=py39h2bbff1b_2
-pywinpty=2.0.2=py39h5da7b33_0
-pyyaml=6.0.1=pypi_0
-pyzmq=23.2.0=py39hd77b12b_0
-qt-main=5.15.2=he8e5bd7_7
-qt-webengine=5.15.9=hb9a9bb5_4
-qtconsole=5.3.2=py39haa95532_0
-qtpy=2.2.0=py39haa95532_0
-qtwebkit=5.212=h3ad3cdb_4
-regex=2023.12.25=pypi_0
-requests=2.28.1=py39haa95532_0
-requests-oauthlib=1.3.1=pypi_0
-requests-toolbelt=1.0.0=pypi_0
-roboflow=1.1.14=pypi_0
-rsa=4.9=pypi_0
-safetensors=0.4.1=pypi_0
-scikit-learn=1.1.3=py39hd77b12b_0
-scipy=1.9.3=py39he11b74f_0
-seaborn=0.12.0=py39haa95532_0
-send2trash=1.8.0=pyhd3eb1b0_1
-sentry-sdk=1.39.2=pypi_0
-setproctitle=1.3.3=pypi_0
-setuptools=65.5.0=py39haa95532_0
-sip=6.6.2=py39hd77b12b_0
-six=1.16.0=pyhd3eb1b0_1
-smart-open=6.4.0=pypi_0
-smmap=5.0.1=pypi_0
-sniffio=1.2.0=py39haa95532_1
-sounddevice=0.4.6=pypi_0
-soundfile=0.12.1=pypi_0
-soupsieve=2.3.2.post1=py39haa95532_0
-soxr=0.3.7=pypi_0
-sqlite=3.39.3=h2bbff1b_0
-stack_data=0.2.0=pyhd3eb1b0_0
-supervision=0.17.1=pypi_0
-sympy=1.12=pypi_0
-tensorboard=2.15.1=pypi_0
-tensorboard-data-server=0.7.2=pypi_0
-tensorflow=2.15.0=pypi_0
-tensorflow-estimator=2.15.0=pypi_0
-tensorflow-intel=2.15.0=pypi_0
-tensorflow-io-gcs-filesystem=0.31.0=pypi_0
-termcolor=2.4.0=pypi_0
-terminado=0.13.1=py39haa95532_0
-threadpoolctl=2.2.0=pyh0d69192_0
-tinycss2=1.2.1=py39haa95532_0
-tk=8.6.12=h2bbff1b_0
-tokenizers=0.15.0=pypi_0
-toml=0.10.2=pyhd3eb1b0_0
-toolz=0.12.0=py39haa95532_0
-torch=2.1.2+cu121=pypi_0
-tornado=6.2=py39h2bbff1b_0
-tqdm=4.66.1=pypi_0
-traitlets=5.1.1=pyhd3eb1b0_0
-transformers=4.36.2=pypi_0
-typing-extensions=4.9.0=pypi_0
-tzdata=2022f=h04d1e81_0
-ucimlrepo=0.0.3=pypi_0
-urllib3=1.26.12=py39haa95532_0
-vc=14.2=h21ff451_1
-vega_datasets=0.7.0=py_0
-vs2015_runtime=14.27.29016=h5e58377_2
-wandb=0.16.2=pypi_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-webencodings=0.5.1=py39haa95532_1
-websocket-client=0.58.0=py39haa95532_4
-werkzeug=3.0.1=pypi_0
-wheel=0.37.1=pyhd3eb1b0_0
-widgetsnbextension=3.5.2=py39haa95532_0
-win_inet_pton=1.1.0=py39haa95532_0
-wincertstore=0.2=py39haa95532_2
-winpty=0.4.3=4
-wrapt=1.14.1=pypi_0
-xz=5.2.6=h8cc25b3_0
-zeromq=4.3.4=hd77b12b_0
-zipp=3.8.0=py39haa95532_0
-zlib=1.2.13=h8cc25b3_0
-zstd=1.5.2=h19a0ad4_0
+absl-py==2.1.0
+appdirs==1.4.4
+asttokens==2.4.1
+astunparse==1.6.3
+audioread==3.0.1
+cachetools==5.3.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+docker-pycreds==0.4.0
+exceptiongroup==1.2.0
+executing==2.0.1
+flatbuffers==23.5.26
+fonttools==4.48.1
+gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.41
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.60.1
+h5py==3.10.0
+idna==3.6
+imutils==0.5.4
+ipykernel==6.29.2
+ipython==8.21.0
+jedi==0.19.1
+joblib==1.3.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+keras==2.15.0
+kiwisolver==1.4.5
+lazy_loader==0.3
+libclang==16.0.6
+librosa==0.10.1
+llvmlite==0.42.0
+Markdown==3.5.2
+MarkupSafe==2.1.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+ml-dtypes==0.2.0
+msgpack==1.0.7
+nest-asyncio==1.6.0
+numba==0.59.0
+numpy==1.26.4
+oauthlib==3.2.2
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.2.0
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.0
+pooch==1.8.0
+prompt-toolkit==3.0.43
+protobuf==4.25.2
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.4.0
+scipy==1.12.0
+seaborn==0.13.2
+sentry-sdk==1.40.3
+setproctitle==1.3.3
+six==1.16.0
+smmap==5.0.1
+soundfile==0.12.1
+soxr==0.3.7
+stack-data==0.6.3
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0.post1
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+threadpoolctl==3.2.0
+tornado==6.4
+traitlets==5.14.1
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.2.0
+wandb==0.16.3
+wcwidth==0.2.13
+Werkzeug==3.0.1
+wrapt==1.14.1
